issue to indent page fix

--- a/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
+++ b/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
@@ -1,6 +1,13 @@
-<h1 mat-dialog-title>
-  Issue to Indent Steelbar 15MM Available in Stock: 1500MT
-</h1>
+<div mat-dialog-title>
+  <div class="row">
+    <div class="col-xs-3">
+      Steelbar 15 MM
+    </div>
+    <div class="col-xs-4">
+      Available in Stock: 1500 MT
+    </div>
+  </div>
+</div>
 
 <div mat-dialog-content class="p-l-10 p-r-10">
   <div class="row">
@@ -14,74 +21,76 @@
       </div>
       <div class="row p-t-10 p-b-10 gray-border">
         <div class="col-xs-3">
-          <label>Indent 1</label>
+          <div>Indent 1</div>
         </div>
         <div class="col-xs-2">
-          <label>600 MT</label>
+          <div>600 MT</div>
         </div>
         <div class="col-xs-2">
-          <label>24:01:2020</label>
+          <div>24:01:2020</div>
         </div>
         <div class="col-xs-2">
-          <label>600 MT</label>
+          <div>600 MT</div>
         </div>
         <div class="col-xs-3">
           <mat-form-field class="col-xs-12 border-input">
             <input matInput type="number" placeholder="Issue Quantity" />
           </mat-form-field>
+          <span> MT</span>
         </div>
       </div>
 
       <div class="row p-t-10 p-b-10 gray-border">
         <div class="col-xs-3">
-          <label>Indent 1</label>
+          <div>Indent 1</div>
         </div>
         <div class="col-xs-2">
-          <label>600 MT</label>
+          <div>600 MT</div>
         </div>
         <div class="col-xs-2">
-          <label>24:01:2020</label>
+          <div>24:01:2020</div>
         </div>
         <div class="col-xs-2">
-          <label>600 MT</label>
+          <div>600 MT</div>
         </div>
         <div class="col-xs-3">
           <mat-form-field class="col-xs-12 border-input">
             <input matInput type="number" placeholder="Issue Quantity" />
           </mat-form-field>
+          <span> MT</span>
         </div>
       </div>
 
       <div class="row p-t-10 p-b-10 gray-border">
         <div class="col-xs-3">
-          <label>Indent 1</label>
+          <div>Indent 1</div>
         </div>
         <div class="col-xs-2">
-          <label>600 MT</label>
+          <div>600 MT</div>
         </div>
         <div class="col-xs-2">
-          <label>24:01:2020</label>
+          <div>24:01:2020</div>
         </div>
         <div class="col-xs-2">
-          <label>600 MT</label>
+          <div>600 MT</div>
         </div>
         <div class="col-xs-3">
           <mat-form-field class="col-xs-12 border-input">
             <input matInput type="number" placeholder="Issue Quantity" />
           </mat-form-field>
+          <span> MT</span>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div mat-dialog-actions>
-  <button
-    mat-raised-button
-    class="main-background-color main-button color-white m-b-5 center-element"
-    [mat-dialog-close]=""
-    cdkFocusInitial
-  >
-    Save
-  </button>
+<div mat-dialog-actions class="parent">
+  <div class="center-element">
+    <button mat-raised-button class="main-background-color main-button color-white m-b-5" [mat-dialog-close]=""
+      cdkFocusInitial>
+      Save
+    </button>
+  </div>
+
 </div>
