--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -4,58 +4,76 @@
     <div class="row">
       <div class="col-md-12">
         <div class="row p-b-10">
-          <div class="col-md-1 p-t-30">
-            <label for="validity" class="pull-right">Quote Valid till</label>
-          </div>
-          <div class="col-md-2">
+          <div class="col-md-5 p-t-10">
+            <label for="validity" class="pull-left p-t-20 p-r-10">Quote Valid till</label>
             <mat-form-field class="border-input">
-              <input matInput type="text" placeholder="27-01-2020" />
+              <input
+                matInput
+                [matDatepicker]="dueDate"
+                placeholder="Project Start Date"
+                [(ngModel)]="rfqSupplierDetailList.dueDate"
+              />
+              <mat-datepicker-toggle
+                matSuffix
+                [for]="dueDate"
+              ></mat-datepicker-toggle>
+              <mat-datepicker
+                #dueDate
+                startView="month"
+                [startAt]="dueDate"
+                (change)="valueChange(rfqSupplierDetailList)"
+              ></mat-datepicker>
             </mat-form-field>
-            <mat-icon>calendar_today</mat-icon>
           </div>
-          <div class="col-md-4"></div>
-          <div class="col-md-1 p-t-30">
-            <label for="bidCompletion" class="pull-right">Bid Completion:</label>
+          <div class="col-md-5 p-t-10">
+            <label for="bidCompletion" class="pull-left p-t-20 p-r-10">Bid Completion:</label>
+            <span class="pull-left text-semi-bold m-t-20">6/12</span>
           </div>
-          <div class="col-md-1">
-            <mat-form-field>
-              <input matInput type="text" placeholder="6/12" />
-            </mat-form-field>
-          </div>
-          <div class="col-md-3 p-t-20 p-r-30">
-            <button mat-raised-button class="main-background-color main-button color-white pull-right">
+          <div class="col-md-2 p-t-20 p-r-30">
+            <button mat-raised-button [disabled]="!submitButtonValidationFlag" class="main-background-color main-button color-white pull-right" (click)="postRFQDetailSupplier(rfqSupplierDetailList)">
               Submit
             </button>
           </div>
         </div>
 
 
-        <div displayMode="flat" multi class="mat-table">
+        <div displayMode="flat" multi class="mat-table" *ngFor="let projects of rfqSupplierDetailList.projectList">
 
           <!-- Project Name Header -->
-          <section matSort class="mat-header-row main-background-color">
-            <div class="mat-header-cell col-xs-2 font-size18" mat-sort-header="projectName">Project Name 1</div>
-            <div class="mat-header-cell col-xs-2 font-size14" mat-sort-header="address">Sector 43, Gurgaon, Haryana
+          <section matSort class="mat-header-row blue-background-color color-white">
+            <div class="mat-header-cell col-xs-2 font-size18" mat-sort-header="projectName">{{projects.projectName}}</div>
+          <div class="mat-header-cell col-xs-4 font-size14" mat-sort-header="address">{{projects.addressLine1}},{{projects.city}},{{projects.state}}
             </div>
-            <div class="col-xs-8">
-              <mat-radio-group aria-label="Select GST" class="pull-right">
-                <mat-radio-button class="p-r-20" value="IGST">IGST</mat-radio-button>
-                <mat-radio-button value="CGST-SGST">CGST & SGST</mat-radio-button>
+            <div class="col-xs-6">
+              <mat-radio-group aria-label="Select GST" class="pull-right" [(ngModel)]="projects.gst">
+                <mat-radio-button class="p-r-20" value="IGST" [checked]="projects.gst == 'IGST'">IGST</mat-radio-button>
+                <mat-radio-button value="CGST-SGST" >CGST & SGST</mat-radio-button>
               </mat-radio-group>
             </div>
           </section>
 
           <!-- Material Info -->
-          <section matSort class="mat-header-row">
-            <div class="mat-header-cell font-size18" mat-sort-header="material">Steelbar - 43 MM Steel</div>
-            <div class="mat-header-cell font-size14" mat-sort-header="qty">Requested Quantity: 1500 MT</div>
-            <div class="mat-header-cell border-input" mat-sort-header="gst">
-              <input matInput type="number" placeholder="GST %">
+          <ng-container *ngFor="let material of projects.materialList">
+          <section matSort class="mat-row">
+            <div class="mat-cell font-size18" mat-sort-header="material">{{material.materialName}}</div>
+          <div class="mat-cell font-size14" mat-sort-header="qty">Requested Quantity: {{material.materialQuantity}} {{material.materialUnit}}</div>
+            <div class="mat border-input" mat-sort-header="gst">
+              <mat-form-field class="border-input">
+                ₹ <input
+                  matInput
+                  type="number"
+                  placeholder="GST %"
+                  [(ngModel)]="material.materialIgst"
+                  (change)="valueChange(rfqSupplierDetailList)"
+                />
+                <mat-error>GST is Required</mat-error>
+              </mat-form-field>
             </div>
           </section>
 
           <!-- Brand Header -->
-          <section matSort class="mat-header-row main-background-color">
+          <ng-container>
+          <section matSort class="mat-header-row blue-background-color color-white">
             <div class="mat-header-cell font-size14" mat-sort-header="brandName">Brand Name</div>
             <div class="mat-header-cell font-size14" mat-sort-header="rate">Rate</div>
             <div class="mat-header-cell font-size14" mat-sort-header="totalAmt">Total Amount (Rs)</div>
@@ -63,42 +81,28 @@
           </section>
 
           <!-- Brand-wise details -->
-          <div class="mat-row">
-            <div class="mat-cell">Brand Name</div>
-            <div class="mat-cell border-input">
-              Rs. <input matInput type="number" placeholder="Rate">
+          <div class="mat-row table-gray-background-color" *ngFor="let brand of material.rfqBrandList">
+            <div class="mat-cell">{{brand.brandName}}</div>
+            <div class="mat-cell">
+            <mat-form-field class="border-input">
+              ₹ <input
+                matInput
+                type="number"
+                placeholder="Rate"
+                [(ngModel)]="brand.brandRate"
+                (change)="valueChange(rfqSupplierDetailList)"
+              />
+              <mat-error>Project Name is Required</mat-error>
+            </mat-form-field>
             </div>
-            <div class="mat-cell">2456.00</div>
-            <div class="mat-cell">200.00</div>
+          <div class="mat-cell">{{brand.brandRate * material.materialQuantity}}</div>
+          <div class="mat-cell">
+            <span *ngIf="!brand.brandRate">0</span>
+            <span *ngIf="brand.brandRate">{{((material.materialIgst/100)*(brand.brandRate * material.materialQuantity))}}</span>
           </div>
-
-          <div class="mat-row">
-            <div class="mat-cell">Brand Name</div>
-            <div class="mat-cell border-input">
-              Rs. <input matInput type="number" placeholder="Rate">
-            </div>
-            <div class="mat-cell">2456.00</div>
-            <div class="mat-cell">200.00</div>
           </div>
-
-          <div class="mat-row">
-            <div class="mat-cell">Brand Name</div>
-            <div class="mat-cell border-input">
-              Rs. <input matInput type="number" placeholder="Rate">
-            </div>
-            <div class="mat-cell">2456.00</div>
-            <div class="mat-cell">200.00</div>
-          </div>
-
-          <div class="mat-row">
-            <div class="mat-cell">Brand Name</div>
-            <div class="mat-cell border-input">
-              Rs. <input matInput type="number" placeholder="Rate">
-            </div>
-            <div class="mat-cell">2456.00</div>
-            <div class="mat-cell">200.00</div>
-          </div>
-
+        </ng-container>
+        </ng-container>
 
         </div>
       </div>
