--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -53,7 +53,7 @@ $mat-row-horizontal-padding: 24px;
     flex: 1;
     overflow: hidden;
     word-wrap: break-word;
-    color: black !important;
+    color: black;
 }
 
 input.quantity {
