--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -33,7 +33,7 @@
                   <mat-expansion-panel *ngFor="let material of project.materialList; let m = index" [formGroupName]="m">
                     <mat-expansion-panel-header class="mat-row">
                       <span class="col-xs-2">{{ material.materialName }} </span>
-                      <span class="col-xs-2"> {{ material.materialQty }} </span>
+                      <span class="col-xs-2"> {{ material.rfqMaterialQty }} </span>
                       <span class="col-xs-1" *ngFor="let brand of material.brandList">
                         {{ brand }}
                       </span>
