--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -8,11 +8,7 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="row">
-          <table
-            mat-table
-            [dataSource]="openRfqList"
-            class="mat-elevation-z8 col-sm-12"
-          >
+          <table mat-table [dataSource]="openRfqList" class="mat-elevation-z8 col-sm-12">
             <ng-container matColumnDef="RFQ Name">
               <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
               <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
@@ -63,8 +59,8 @@
             </ng-container>
             <ng-container matColumnDef="action2">
               <th mat-header-cell *matHeaderCellDef></th>
-              <td mat-cell *matCellDef="let element">
-                <a [routerLink]="['../rfq-bid']">View Bids</a>
+              <td mat-cell *matCellDef="let element;let i=index">
+                <a [routerLink]="['../rfq-bid/',i]">View Bids</a>
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -81,11 +77,7 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="row">
-          <table
-            mat-table
-            [dataSource]="closeRfqList"
-            class="mat-elevation-z8 col-sm-12"
-          >
+          <table mat-table [dataSource]="closeRfqList" class="mat-elevation-z8 col-sm-12">
             <ng-container matColumnDef="RFQ Name">
               <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
               <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
