--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -20,13 +20,29 @@
         <mat-grid-list cols="2" rowHeight="100px">
             <mat-grid-tile [colspan]="1" [rowspan]="2">
                 <div class="col-xs-12 pull-left">
-                    <mat-list>
-                        <h3 mat-subheader>Contract Detail</h3>
-                        <mat-list-item mat-subheader> Project Name: {{cardData.projectAddress.projectName}}
-                        </mat-list-item>
-                        <mat-list-item mat-subheader> Contact Person: </mat-list-item>
-                        <mat-list-item mat-subheader> Delivery Address: </mat-list-item>
-                    </mat-list>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <mat-list-item mat-subheader> Project Name: {{cardData.projectAddress.projectName}}
+                            </mat-list-item>
+                            <mat-list-item mat-subheader> Contact Person:
+                                {{cardData.projectAddress.firstName?cardData.projectAddress.firstName:""}}
+                                {{cardData.projectAddress.lastName?cardData.projectAddress.lastName:""}}
+
+                                <button (click)="openDialog('projectUserId',cardData.projectId)"><i
+                                        class="material-icons">
+                                        edit
+                                    </i></button>
+                            </mat-list-item>
+                            <mat-list-item mat-subheader> Phone
+                                No.:{{cardData.projectAddress.contactNo?cardData.projectAddress.contactNo:""}}
+                            </mat-list-item>
+                            <mat-list-item mat-subheader> Email.:
+                                {{cardData.projectAddress.email?cardData.projectAddress.email:""}}</mat-list-item>
+                        </div>
+                        <div class="col-xs-6">
+                            <mat-list-item mat-subheader> Delivery Address: </mat-list-item>
+                        </div>
+                    </div>
                 </div>
             </mat-grid-tile>
             <mat-grid-tile [colspan]="1" [rowspan]="4">
@@ -36,6 +52,7 @@
                         <mat-list-item mat-subheader> Supplier Name: {{cardData.supplierAddress.supplierName}}
                         </mat-list-item>
                         <mat-list-item mat-subheader> Contact Person: {{cardData.supplierAddress.supplierName}}
+
                         </mat-list-item>
                         <mat-list-item mat-subheader> Phone No.: {{cardData.supplierAddress.contactNo}} </mat-list-item>
                         <mat-list-item mat-subheader> Street Address:{{cardData.supplierAddress.contactNo}}
@@ -54,7 +71,12 @@
                             <div class="col-xs-6">
                                 <mat-list-item mat-subheader> Company Name: {{cardData.projectAddress.projectName}}
                                 </mat-list-item>
-                                <mat-list-item mat-subheader> Contact Person: </mat-list-item>
+                                <mat-list-item mat-subheader> Contact Person:
+                                    <button (click)="openDialog('projectBillingUserId',cardData.projectId)"><i
+                                            class="material-icons">
+                                            edit
+                                        </i></button>
+                                </mat-list-item>
                                 <mat-list-item mat-subheader> Phone No.: </mat-list-item>
                             </div>
                             <div class="col-xs-6">
