--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -129,7 +129,7 @@
           <ng-container matColumnDef="Makes">
             <th mat-header-cell *matHeaderCellDef>Makes</th>
             <td mat-cell *matCellDef="let element">
-              <span *ngFor="let make of element.makes">
+              <span class="brand-view-style m-r-5" *ngFor="let make of element.makes">
                 {{make}}
               </span>
             </td>
