--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -1,6 +1,16 @@
 <!-- <fix-header></fix-header> -->
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+    <div class="row black-border">
+      <div class="col-sm-12 p-t-20 p-b-10">
+        <div class="col-sm-8 pull-left">
+          <img src="../../../../assets/images/loginLogo.png" alt="BuildSupply_Logo" height="130">
+        </div>
+        <div class="col-sm-4 pull-right text-right">
+          <img src="../../../../assets/images/Group-5.png" alt="BuildSupply_Logo" height="100">
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col-md-12">
         <div class="row p-b-10">
@@ -44,7 +54,7 @@
             <div class="mat-header-cell col-xs-2 font-size18" mat-sort-header="projectName">{{projects.projectName}}</div>
           <div class="mat-header-cell col-xs-4 font-size14" mat-sort-header="address">{{projects.addressLine1}},{{projects.city}},{{projects.state}}
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 white-radiobutton">
               <mat-radio-group aria-label="Select GST" class="pull-right" [(ngModel)]="projects.gst">
                 <mat-radio-button class="p-r-20" value="IGST" [checked]="projects.gst == 'IGST'">IGST</mat-radio-button>
                 <mat-radio-button value="CGST-SGST" >CGST & SGST</mat-radio-button>
