--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -22,25 +22,30 @@
                 <div class="col-xs-12 pull-left">
                     <div class="row">
                         <div class="col-xs-6">
-                            <mat-list-item mat-subheader> Project Name: {{cardData.projectAddress.projectName}}
-                            </mat-list-item>
-                            <mat-list-item mat-subheader> Contact Person:
-                                {{cardData.projectAddress.firstName?cardData.projectAddress.firstName:""}}
-                                {{cardData.projectAddress.lastName?cardData.projectAddress.lastName:""}}
+                            <mat-list>
+                                <mat-list-item mat-subheader> Project Name: {{cardData.projectAddress.projectName}}
+                                </mat-list-item>
+                                <mat-list-item mat-subheader> Contact Person:
+                                    {{cardData.projectAddress.firstName?cardData.projectAddress.firstName:""}}
+                                    {{cardData.projectAddress.lastName?cardData.projectAddress.lastName:""}}
 
-                                <button (click)="openDialog('projectUserId',cardData.projectId)"><i
-                                        class="material-icons">
-                                        edit
-                                    </i></button>
-                            </mat-list-item>
-                            <mat-list-item mat-subheader> Phone
-                                No.:{{cardData.projectAddress.contactNo?cardData.projectAddress.contactNo:""}}
-                            </mat-list-item>
-                            <mat-list-item mat-subheader> Email.:
-                                {{cardData.projectAddress.email?cardData.projectAddress.email:""}}</mat-list-item>
+                                    <a href="javascript:void(0)"
+                                        (click)="openDialog('projectUserId',cardData.projectId)"><i
+                                            class="material-icons main-color">
+                                            edit
+                                        </i></a>
+                                </mat-list-item>
+                                <mat-list-item mat-subheader> Phone
+                                    No.:{{cardData.projectAddress.contactNo?cardData.projectAddress.contactNo:""}}
+                                </mat-list-item>
+                                <mat-list-item mat-subheader> Email.:
+                                    {{cardData.projectAddress.email?cardData.projectAddress.email:""}}</mat-list-item>
+                            </mat-list>
                         </div>
                         <div class="col-xs-6">
-                            <mat-list-item mat-subheader> Delivery Address: </mat-list-item>
+                            <mat-list>
+                                <mat-list-item mat-subheader> Delivery Address: </mat-list-item>
+                            </mat-list>
                         </div>
                     </div>
                 </div>
@@ -69,15 +74,23 @@
                         <h3 mat-subheader>Contract Detail</h3>
                         <div class="row">
                             <div class="col-xs-6">
-                                <mat-list-item mat-subheader> Company Name: {{cardData.projectAddress.projectName}}
+                                <mat-list-item mat-subheader> Company Name: {{cardData.billingAddress.projectName}}
                                 </mat-list-item>
                                 <mat-list-item mat-subheader> Contact Person:
-                                    <button (click)="openDialog('projectBillingUserId',cardData.projectId)"><i
-                                            class="material-icons">
+                                    {{cardData.billingAddress.firstName?cardData.billingAddress.firstName:""}}
+                                    {{cardData.billingAddress.lastName?cardData.billingAddress.lastName:""}}
+
+                                    <a href="javascript:void(0)"
+                                        (click)="openDialog('projectBillingUserId',cardData.projectId)"><i
+                                            class="material-icons main-color">
                                             edit
-                                        </i></button>
+                                        </i></a>
                                 </mat-list-item>
-                                <mat-list-item mat-subheader> Phone No.: </mat-list-item>
+                                <mat-list-item mat-subheader> Phone
+                                    No.:{{cardData.billingAddress.contactNo?cardData.billingAddress.contactNo:""}}
+                                </mat-list-item>
+                                <mat-list-item mat-subheader> Email.:
+                                    {{cardData.billingAddress.email?cardData.billingAddress.email:""}}</mat-list-item>
                             </div>
                             <div class="col-xs-6">
                                 <mat-list-item mat-subheader> Street Address: </mat-list-item>
