--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -1,5 +1,15 @@
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+    <div class="row">
+      <div class="col-xs-12 text-right">
+        <button mat-raised-button class="main-background-color main-button color-white m-b-5"
+          [routerLink]="['../../rfq/project-materials']">
+          Create RFQ
+        </button>
+      </div>
+
+    </div>
+
     <mat-accordion>
       <mat-expansion-panel>
         <mat-expansion-panel-header>
