issue to indent dialog: data bind

--- a/src/app/features/auth/change-password/change-password.component.html
+++ b/src/app/features/auth/change-password/change-password.component.html
@@ -3,21 +3,13 @@
     <div class="row m-0">
       <div class="col-md-7 ">
         <div class="min-height">
-          <img
-            src="../../../assets/images/Login.jpg"
-            alt="construction-site-image"
-            style="width: 100%;"
-          />
+          <img src="../../../assets/images/Login.jpg" alt="construction-site-image" style="width: 100%;" />
         </div>
       </div>
       <div class="col-md-5 parent">
         <div class="row center-element">
           <div class="col-xs-12 p-b-30 p-l-0">
-            <img
-              src="../../../assets/images/loginLogo.png"
-              alt="BuildSupply"
-              style="height:60px"
-            />
+            <img src="../../../assets/images/loginLogo.png" alt="BuildSupply" style="height:60px" />
           </div>
 
           <div class="change-password row">
@@ -37,47 +29,9 @@
             </mat-form-field>
 
             <div mat-dialog-actions class="col-xs-12 p-t-80 p-l-0">
-              <button
-                mat-raised-button
-                class="main-background-color main-button color-white m-b-5"
-                [mat-dialog-close]=""
-                cdkFocusInitial
-                style="width: 100%;"
-              >
+              <button mat-raised-button class="main-background-color main-button color-white m-b-5"
+                [mat-dialog-close]="" cdkFocusInitial style="width: 100%;">
                 Submit
-              </button>
-            </div>
-          </div>
-
-          <div class="changed-password row">
-            <div class="col-xs-12 p-0">
-              <h3 class="p-b-20">Password Changed</h3>
-              <p class="dark-gray-color">
-                Your password has been changed successfully! Please sign in
-                again. Thank you...
-              </p>
-            </div>
-
-            <mat-form-field class="col-xs-12 border-input  p-l-0">
-              <input matInput type="number" placeholder="Phone No." />
-            </mat-form-field>
-
-            <mat-form-field class="col-xs-12 border-input  p-l-0">
-              <input matInput type="password" placeholder="Password" />
-              <a>
-                <mat-icon class="password-eye">remove_red_eye</mat-icon>
-              </a>
-            </mat-form-field>
-
-            <div mat-dialog-actions class="col-xs-12 p-t-80 p-l-0">
-              <button
-                mat-raised-button
-                class="main-background-color main-button color-white m-b-5"
-                [mat-dialog-close]=""
-                cdkFocusInitial
-                style="width: 100%;"
-              >
-                Sign In
               </button>
             </div>
           </div>
