--- a/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
+++ b/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
@@ -20,42 +20,44 @@
           <div class="col-xs-2">Issued Quantity</div>
           <div class="col-xs-3">To be Issued</div>
         </div>
-        <div class="row p-t-10 p-b-10 gray-border" *ngFor="let indent of issueToIndentDetails.indentDetailList">
-          <div class="col-xs-3">
-            <div>
-              {{indent.indentId}}
+        <form [formGroup]="materialForms " (ngSubmit)="onSubmit()">
+          <div formArrayName="forms" class="row p-t-10 p-b-10 gray-border"
+            *ngFor="let indent of issueToIndentDetails.indentDetailList; let i = index; ">
+            <div class="col-xs-3 formGroup">
+              <div>
+                {{indent.indentId}}
+              </div>
+            </div>
+            <div class="col-xs-2 formGroup">
+              <div>
+                {{indent.quantity}}
+              </div>
+            </div>
+            <div class="col-xs-2 formGroup">
+              <div>
+                {{indent.dueDate}}
+              </div>
+            </div>
+            <div class="col-xs-2 formGroup">
+              <div>
+                {{indent.issuedQty}}
+              </div>
+            </div>
+            <div class=" col-xs-3 formGroup">
+              <mat-form-field class="col-xs-12 border-input" [formGroupName]="i">
+                <input formControlName="issuedQty" matInput type="number" placeholder="Issue Quantity" />
+              </mat-form-field>
+              <span>{{indent.unit}}</span>
             </div>
           </div>
-          <div class="col-xs-2">
-            <div>
-              {{indent.quantity}}
-            </div>
-          </div>
-          <div class="col-xs-2">
-            <div>
-              {{indent.dueDate}}
-            </div>
-          </div>
-          <div class="col-xs-2">
-            <div>
-              {{indent.issuedQty}}
-            </div>
-          </div>
-          <div class="col-xs-3">
-            <mat-form-field class="col-xs-12 border-input">
-              <input matInput type="number" placeholder="Issue Quantity" />
-            </mat-form-field>
-            <span> MT</span>
-          </div>
-        </div>
+        </form>
       </div>
     </div>
   </div>
 
   <div mat-dialog-actions class="parent">
     <div class="center-element">
-      <button mat-raised-button class="main-background-color main-button color-white m-b-5"
-        (click)="postIssueQuantity(issueToIndentDetails.indentDetailList)">
+      <button mat-raised-button class="main-background-color main-button color-white m-b-5" (click)="showIndent()">
         Save
       </button>
     </div>
