froalaEditor issue resolved

--- a/src/app/features/rfq/documents/documents.component.html
+++ b/src/app/features/rfq/documents/documents.component.html
@@ -74,7 +74,7 @@
     </div>
 
     <!-- second row: terms and conditions -->
-    <!-- <div [froalaEditor]>Hello, Froala!</div> -->
-    <!-- <froala></froala> -->
+    
+    <div [froalaEditor]>Hello, Froala!</div>
   </div>
 </div>
