--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,3 +13,5 @@
     @import "./pages/dashboard.scss";
     @import "./pages/bom-preview.scss";
     @import "./pages/global-store.component.scss";
+
+    @import "./pages/users.scss";
