--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -11,6 +11,7 @@
         <app-po-card #poCard *ngIf="tableData.length" [cardData]="cardData" [viewMode]="viewMode"></app-po-card>
         <app-po-table #poTable *ngIf="tableData.length" [poTableData]="tableData" [viewMode]="viewMode">
         </app-po-table>
+        <app-po-documents #poDocument></app-po-documents>
         <button (click)="viewModes()">viewMode</button>
     </div>
 </div>
