--- a/src/app/shared/dialogs/add-address-po/add-addressPo.html
+++ b/src/app/shared/dialogs/add-address-po/add-addressPo.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
     <mat-tab-group class="overflow-remove">
         <mat-tab label="Choose Address">
-            <form [formGroup]="selectAddressFrm">
+            <form *ngIf="address" [formGroup]="selectAddressFrm">
                 <div class="row">
                     <div class="col-xs-12">
                         <mat-radio-group aria-label="Select an option" name="address" formControlName="address">
@@ -19,8 +19,8 @@
         </mat-tab>
 
         <mat-tab label="Add Address">
-            <form [formGroup]="newAddressForm">
-                <div class="container">
+            <form *ngIf="address" [formGroup]="newAddressForm">
+                <div div class="container">
                     <div class="row">
                         <div class="col-md-6 ">
                             <div class="row border-input">
@@ -71,12 +71,12 @@
 </div>
 
 <div mat-dialog-actions class="pull-right">
-    <button mat-raised-button class="main-background-color main-button color-white m-b-5" [mat-dialog-close]=""
-        cdkFocusInitial (click)="onselectAddress()">
+    <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial
+        (click)="onselectAddress()">
         Save
     </button>
-    <button mat-raised-button class="main-background-color main-button color-white m-b-5" [mat-dialog-close]=""
-        cdkFocusInitial (click)="onAddAddress()">
+    <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial
+        (click)="onAddAddress()">
         Add
     </button>
 </div>
